Increases link font and fixes scrollbar color.

--- a/frontend/scss/_colors.scss
+++ b/frontend/scss/_colors.scss
@@ -10,6 +10,7 @@ $green: #4c7e4c;
 $lightgreen: #90ee90;
 $berry: #241571;
 $purple: #A386D9;
-$beige: #faf6ee;
-$paleteal: #f0fbfb;
+$beige: #FAF6EE;
+$tan: #D9BBAA;
+$paleteal: #F0FBFB;
 $cerulean: #0492C2;
