--- a/frontend/scss/_theme.scss
+++ b/frontend/scss/_theme.scss
@@ -28,11 +28,11 @@ html {
   &::-webkit-scrollbar-thumb {
     border: 3px solid transparent;
     border-radius: 100px;
-    background-color: lightseagreen;
+    background-color: lightgreen;
     background-clip: content-box;
   }
 
-  scrollbar-color: lightseagreen transparent;
+  scrollbar-color: lightgreen transparent;
 }
 
 body {
