--- a/frontend/scss/components/_footer.scss
+++ b/frontend/scss/components/_footer.scss
@@ -4,7 +4,7 @@
   width: 100%;
   bottom: 0;
   font-family: $fontSecondary;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 400;
   letter-spacing: 1px;
   float: inline-start;
